carisurau/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carisurau
  labels:
    app: carisurau
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carisurau
  template:
    metadata:
      labels:
        app: carisurau
    spec:
      containers:
      - name: carisurau
        image: farhanhelmy/ratemysurau:0.0.1
        ports:
        - containerPort: 3000
