carisurau/service.yml
apiVersion: v1
kind: Service
metadata:
  name: carisurau-service
spec:
  selector:
    app: carisurau
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
